# pod_trades

./: .env.example  .gitignore  CLAUDE.md  PRINCIPLES.md  README.md  REQUIREMENTS.md  SOUL.md  install.ps1  install.sh  pyproject.toml
pod_the_trader/: __init__.py  __main__.py  disclaimer.py  main.py
pod_the_trader/agent/: __init__.py  core.py  memory.py
pod_the_trader/config/: __init__.py  defaults.yaml
pod_the_trader/data/: __init__.py  ledger.py  lot_ledger.py  price_log.py  reconciler.py  wallet_log.py
pod_the_trader/level5/: __init__.py  auth.py  client.py  poller.py
pod_the_trader/tools/: __init__.py  history_tools.py  market_tools.py  portfolio_tools.py  registry.py  solana_tools.py  trading_tools.py
pod_the_trader/trading/: __init__.py  dex.py  portfolio.py  transaction.py
pod_the_trader/tui/: __init__.py  app.py  publisher.py  styles.tcss
pod_the_trader/util/: __init__.py  fs.py
pod_the_trader/wallet/: __init__.py  manager.py  setup.py
scripts/: _debug_tx.py  _dump_state.py  _log_summary.sh  _migrate_legacy.py  _repair_csv_pricing.py  _repair_ledger.py  _status.py  _wallet_holdings.py  check.sh  debug_tx.sh  e2e_test.sh  grep_log.sh  inspect.sh  migrate_legacy.sh  repair_ledger.sh  run_capture.sh  show_data.sh  status.sh  tui_smoke.sh  wallet_holdings.sh
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/integration/: test_startup_flow.py  test_tool_dispatch.py  test_trade_cycle.py
tests/unit/: test_agent_core.py  test_agent_memory.py  test_config.py  test_dex.py  test_disclaimer.py  test_fs_util.py  test_funding_orchestrator.py  (+30 more)
(+9 files in other folders)
