[project]
name = "pod-the-trader"
version = "0.1.0"
description = "Autonomous Solana trading agent powered by MiniMax"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.82.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "solana>=0.36.11",
    "solders>=0.27.1",
    "base58>=2.1.1",
    "python-dotenv>=1.2.2",
    "textual>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.11.0",
]

[project.scripts]
pod-the-trader = "pod_the_trader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"
